--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
 - set -o pipefail && xcodebuild test -project RM_.xcodeproj -scheme RM_ -destination 'platform=iOS Simulator,name=iPhone 4s,OS=8.4' | xcpretty -c
 - set -o pipefail && xcodebuild test -project RM_.xcodeproj -scheme RM_ -destination 'platform=iOS Simulator,name=iPhone 6,OS=9.0' | xcpretty -c
 - set -o pipefail && xcodebuild test -project RM_.xcodeproj -scheme RM_ -destination 'platform=iOS Simulator,name=iPhone 6 Plus,OS=9.3' | xcpretty -c
-- ./docs.sh
+- ./generate_docs.sh
 
 env:
   global:
